# so2-joaomisson

./: .srcdir  AUTHOR  Makefile  Makefile.am  Makefile.in  README  README.md
.reuse/: dep5
.tools/: readme.md  reuse  syseg-export  syseg-newfile  syseg-project  syseg-reuse
bcmd/: Makefile  NOTEBOOK  README  bcmd.ld  bios.S  bios.h  main.c  opt.S  rt0.S  utils.c  utils.h
hw/: AUTHOR  README  hw.S  hwasm.py
mydos/: Makefile  NOTEBOOK  README  bios1.S  bios1.h  bios2.S  bios2.h  bootloader.c  crt0.S  file_system.c  file_system.h  hello.c  kaux.c  kaux.h  kernel.c  kernel.h  libtydos.c  logo.c  prog.c  prog.ld  rt0.S  syscall.c  tydos.h  tydos.ld
